# data-science-projects

learning-claude/: CLAUDE.md  README.md
learning-claude/wiki-alternative-data/: .gitignore  README.md  fetch_data.py  process_data.py  requirements.txt
learning-claude/wiki-alternative-data/notebooks/: 02_spike_detection.ipynb  03_analysis.ipynb
learning-claude/wiki-alternative-data/src/: signals.py  sp500.py  stock_data.py  wiki_pageviews.py
vendor-scoring-engine/: .gitignore  CLAUDE.md  README.md  pyproject.toml
vendor-scoring-engine/.claude/commands/: build-module.md  evaluate.md  plan-module.md
vendor-scoring-engine/src/ingestion/: factor_utils.py  sample_generator.py  schema.py
vendor-scoring-engine/src/modules/: coverage.py  orthogonality.py  signal_decay.py
vendor-scoring-engine/src/scoring/: results.py
vendor-scoring-engine/tests/modules/: test_coverage.py  test_orthogonality.py  test_signal_decay.py
