[project]
name = "vendor-scoring-engine"
version = "0.1.0"
description = "Alt data vendor evaluation framework for L/S equity hedge funds"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.0",
    "numpy>=1.24",
    "scipy>=1.11",
    "statsmodels>=0.14",
    "scikit-learn>=1.3",
    "fastapi>=0.100",
    "uvicorn>=0.23",
    "streamlit>=1.28",
    "plotly>=5.17",
    "matplotlib>=3.7",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "ruff>=0.1",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
